2008-09-21  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl (HandleOneFile): Write proper file:/// URL.

2008-09-20  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl (JavaScript): Remove EOL whitespace from output.

2008-09-19  Jari Aalto  <jari.aalto@cante.net>

	* t2html.pl (CssData): Move closing qq() so that no
	extra whitespaces are written to EOL.
	(MakeToc): <dic class=toc">, remove id=toc, because it
	is already defined one line below. W3C validator error.

2008-03-25  Jari Aalto  <jari.aalto@tamk.fi>

	* t2html.pl (HandleCommandLineArgs): Use 3way open() call.
	(WriteFile): Use 3way open() call.
	(UrlInclude): Use 3way open() call.
	(LinkCache): Use 3way open() call.

2007-11-08  Jari Aalto  <jaalto@cante.cante.net>

	* t2html.pl (MakeMetaTags): If no description was given,
	do not output description http-equiv tag.

2007-10-23  Jari Aalto  <jaalto@cante.cante.net>

	* t2html.pl (CssData::border-width): Change value from 94% to
	'thin'. This makes the dashed table display correctly in Opera.

2007-10-19  Jari Aalto  <jaalto@cante.cante.net>

	* t2html.pl (HtmlFixes): Correct grouping expressions
	that did not catch correct $1. This was causes by recent change
	where the case sensitive options were put in '(?:)' => '((?:))'
	Fix column 12, 'Note:' and <strong> html tag rendering.
	Change <strong> to  '<span class=note>' in order to render
	it as wished.

2007-10-12  Jari Aalto  <jari.aalto@cante.cante.net>

	* t2html.pl (HELP::Referring to local documents):
	Removed documentation of option '#URL-AS-IS-'. This
	is superceded by generic '#URL'

	* t2html.pl (UrlInclude): Fixed reading of
	function argument. This made 'raw:' include mode to
	work again.

2007-09-18  Jari Aalto  <jari.aalto@cante.net>

	RELEASE: 20071002

	* t2html.pl (HtmlFixes): Delete trailing whitespaces.
	(TestPage): Output to current directory, not $HOME/tmp.

2007-05-26  Jari Aalto  <jari aalto A T cante net>

	* t2html.pl (UrlInclude): Added new option $mode.x